# hich

./: .gitignore  .nextflow.log.1  .nextflow.log.2  .nextflow.log.3  .nextflow.log.4  .nextflow.log.5  .nextflow.log.6  .nextflow.log.7  .nextflow.log.8  .nextflow.log.9  .readthedocs.yaml  .~lock.samples.csv#  .~lock.samples.tsv#  cli_env.yml  condaenv.n19vt1x7.requirements.txt  cut.ipynb  dev_env.yml  groups-params.csv  groups.csv  hich.nf  hich_all_output.html  hich_all_output.json  main.nf  master.nf  multiqc.yaml  nextflow.config  nf-test.config  pipeline_env.yml  prototypes  readme.md  run-tests.sh  samples.csv  samples.tsv  samples_KO.csv  test_localHPC.sh  test_localPC.sh  timeline-20240814-34572442.html
contents/: hichWorkflow.nf  main.nf
docker/: alignmentDockerfile  bsboltDockerfile  bwamem2Dockerfile  cooltoolsDockerfile  juicertoolsDockerfile  mustacheDockerfile  open2cDockerfile  pairtoolsDocker  pairtoolsDockerfile
docs/: requirements.txt
env/: cli_env.yml  dev_env.yml  hich.yml  multiqc.yml  pipeline_env.yml  setup_juicer.sh
params/: hic.config  (+13 more)
scripts/compair/: pyproject.toml
scripts/compair/compair/: __main__.py
scripts/fragtag/: fragtagDockerfile  pyproject.toml
scripts/fragtag/fragtag/: __main__.py  bedpe_id_ends.py  bedpe_id_pairs.py  bedpe_pairs.py  df_required_cols.py  df_view.py  frag_index.py  pairsParser.py  pairsTagger.py  pairs_parser.py  pairs_tagger.py
scripts/hich/: .coverage  .gitignore  README.md  cli.env  coverage.xml  environment.yml  find_dependencies.sh  hichDockerfile  pipeline.env  pyproject.toml  result.pairs  result.txt
scripts/hich/hich/: __main__.py
scripts/hich/hich/cli/: __init__.py
scripts/hich/hich/commands/: pairs.py
scripts/hich/hich/compartments/: __init__.py
scripts/hich/hich/coverage/: __init__.py  multi_sampler.py  pairs_histogram.py  pairs_sampler.py  pairs_space.py  selection_sampler.py  stratum_sampler.py  trans_cis_thresholds.py
scripts/hich/hich/digest/: __init__.py
scripts/hich/hich/fragtag/: __init__.py  pairs_parser.py
scripts/hich/hich/hicrep_combos/: __init__.py
scripts/hich/hich/organize/: __init__.py
scripts/hich/hich/pairs/: __init__.py  ends_to_intervals.py
scripts/hich/hich/parse/: pairs_file.py  pairs_header.py  pairs_parser.py  pairs_segment.py  pairs_splitter.py
scripts/hich/hich/sample/: sampler.py
scripts/hich/hich/stats/: __init__.py  compute_pairs_stats.py  discrete_distribution.py  pairs_classifier.py  pairs_rv.py
scripts/hich/output_dir/same_chrom=false/: data_0.parquet
scripts/hich/output_dir/same_chrom=true/: data_0.parquet
scripts/hich/src/hich/: __main__.py
scripts/hich/src/hich/commands/: compartments.py  fasta.py  matrix.py  pairs.py  pipeline.py
scripts/hich/src/hich/fasta/: digest_re.py
scripts/hich/src/hich/pairs/: convert.py  header.py  pairssql.py
scripts/hich/tests/: test_discrete_distribution.py  test_pairs_classifier.py  test_pairs_file.py  test_pairs_segment.py
scripts/redigest/: pyproject.toml  redigestDockerfile
scripts/redigest/redigest/: __main__.py
(+466 files in other folders)
