[tool.poetry]
name = "compair"
version = "0.1.0"
description = ""
authors = ["Ben Skubi <bskubi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
smart-open = "^7.0.4"

[tool.poetry.scripts]
compair = "compair.__main__:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
