[tool.poetry]
name = "fragtag"
version = "0.1.0"
description = ""
authors = ["Ben Skubi <bskubi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
numpy = "^2.0.1"
polars = "^1.2.1"
smart-open = "^7.0.4"

[tool.poetry.scripts]
fragtag = "fragtag.__main__:fragtag"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
