[project]
authors = [{name = "Ben Skubi", email = "skubi@ohsu.edu"}]
name = "hich"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = ["smart-open-with-pbgzip>=0.1.5,<0.2"]

[project.scripts]
hich = "hich.__main__:hich"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge", "bioconda", "bioconda/label/cf201901"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
hich = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
duckdb = ">=1.2.1,<2"
polars = ">=1.24.0,<2"
pbgzip = { version = ">=2015.10.28,<2016", channel = "bioconda/label/cf201901" }
click = ">=8.1.8,<9"
pyarrow = ">=19.0.1,<20"
parse = ">=1.20.2,<2"
